# pysvd2dts

./: .gitignore  LICENSE  README.rst  TODO  pyproject.toml
docs/: conf.py  index.rst
examples/: nrf52840dk_conf.yaml
pysvd2dts/: svd2dts.py
tests/: conftest.py  test_libraries.py  test_svd2dts.py
tests/test_libraries/: CMSIS-SVD.xsd
tests/test_svd2dts/: arm_example_conf.yaml
